# faculdade_impacta_atividades

./: .flake8  .gitignore  README.md  index.md  pyproject.toml
.github/workflows/: main.yml
Ambientacao/: area-do-circulo.py  media-1.py  produto-simples.py
POO/atividade_continua-01/: test_numeros.py  testes_atividades.py
POO/atividade_continua-02/: atividade_conta.py  test_conta.py
POO/atividade_continua-03/: loja.py
Treinamento1/: Area.py  Consumo.py  Diferenca.py  area.py
ambientacao/: hello-world.py
atividade_continua-01/: comprando_com_desconto.py  conversao_de_polegadas.py  dia_da_entrega.py  professor_mas_e_so_meio.py  quanto_tempo.py
atividade_continua-02/: intervalo_de_primos.py  pague_o_aluguel.py  tabuada.py
atividade_continua-03/: carrinho_de_compras.py  corra_forrest.py  exibindo_tabuadas.py  impactube.py  segunda_chance.py
atividade_continua-03/tests/: test_carrrinho_de_compras.py
atividades/ambientacao/: area-do-circulo.py  extremamente-basico.py
atividades/atividade_continua-01/: dia_da_entrega.py
atividades/atividade_continua-02/: anos_bissextos.py  triangulo_alfabetico.py
atividades/atividade_continua-03/: exibindo_tabuadas.py  impactube.py
atividades/treinamento1/: Salario.py  diferenca.py  salario_com_bonus.py
atividades/treinamento2/: mes.py  pares_entre_5_numeros.py
linguagem_programacao/uri_online_judge/atividade_continua-01/: comprando_com_desconto.py
treinamento1/: distancia_entre_dois_pontos.py
treinamento2/: mes.py  multiplos.py
treinamento4/: roberto_e_a_sala_desenfreada.py
(+9 files in other folders)
