[tool.poetry]
name = "uri"
version = "0.1.0"
description = ""
authors = ["Rodrigo Usuy <rousuy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.1"
autopep8 = "^1.6.0"
codecov = "^2.1.12"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
